--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "homepage": "https://danmurphy.codes",
   "devDependencies": {
     "md5-file": "^4.0.0",
+    "uglify-js": "^3.4.9",
     "uglifycss": "0.0.29"
   }
 }
