--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "homepage": "https://danmurphy.codes",
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-preset-minify": "^0.5.1",
     "md5-file": "^4.0.0",
-    "uglify-js": "^3.4.9",
     "uglifycss": "0.0.29"
   }
 }
